# nat-wof

./: .gitignore  README.md
ai_player/: configs  data  pyproject.toml  requirements.txt
ai_player/configs/: config.yml
ai_player/data/: prompt.json
ai_player/src/ai_player/: __init__.py  ai_player_function.py  buy_vowel.py  register.py  solve.py  spin.py  state_manager.py  wheel.py
ai_player/src/ai_player/configs/: config.yml
ai_player/tests/: test_vowel_heuristic.py
human/: game_runner.py  human_cli.py
pat/: README.md  configs  data  pyproject.toml
pat/configs/: config.yml
pat/src/pat/: foo.py  pat_function.py  puzzle_helper.py  redis_admin.py  register.py  state_manager.py
pat/src/pat/configs/: config.yml
pat/src/pat/data/: puzzles.csv  wheel.txt
wof_shared/: pyproject.toml
wof_shared/src/wof_shared/: __init__.py  constants.py  redis_client.py  state.py  wheel.py
wof_shared/src/wof_shared/assets/: wheel.txt
wof_shared/tests/: conftest.py  test_state_masking.py  test_state_scores.py  test_wheel.py
